--- a/src/styles.css
+++ b/src/styles.css
@@ -1,25 +1,113 @@
+/* global styles */
+
 *,
 *::before,
 *::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: "Ubuntu", sans-serif;
 }
 
 body {
   background-color: #313131;
-  color: #F8F2FF;
+  color: #f8f2ff;
 }
 
+
+section {
+  margin: 30px 0;
+}
+
+section h2 {
+  font-size: 2.1em;
+}
+
+section p{
+  font-size: 1.2em;
+  opacity: .86;
+  letter-spacing: 140%;
+}
+
+/* layout styles */
+
 .container {
-  max-width: 980px;
+  max-width: 800px;
   margin: 24px auto;
   padding: 1em;
 }
+
+/* heading styles */
 
 header {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+header > div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+header > div h1 {
+  font-size: 2.5em;
+}
+
+/* image styles */
+
+@media only screen and (max-width: 600px) {
+  header {
+    flex-direction: column;
+  }
+
+  .me-image {
+    height: 200px;
+  }
+
+  header > div {
+    gap: 12px;
+  }
+}
+
+/* truth and lie typewriter */
+
+.truth-lie {
+  text-align: center;
+  font-weight: 500;
+  font-size: 1.2em;
+}
+
+/* social link styles */
+
+.social-links {
+  display: flex;
+  gap: 2em;
+  justify-content: center;
+  width: 100%;
+}
+
+
+.link a{
+  color: #6b15d9;
+  text-decoration: none;
+  font-size: 2em;
+}
+
+.hide-ext {
+  display: none;
+  
+}
+
+.link:hover .hide-ext {
+  display: inline;
+  width: 2.3em;
+}
+
+/* question form styles */
+
+.question-form input{
+  background-color: black;
 }
